homepage/static/css/style.less
@flag-size: 16px;
@badge-width: 300px;
@badge-height: 204px;
@contacts-height: 371px;
@block-spacing: 4px;
@block-padding: 15px;
@profile-margin: 5px;
@profile-height: (@profile-margin * 2 + @badge-height + @block-spacing + @contacts-height);
@large-screen-height: (@profile-height + 2 * @flag-size + 50px);
@large-screen: ~"(min-height: @{large-screen-height})";

@link-color: #427fed;
@emphasized-color: #262626;
@thin-border-color: #d5d5d5;

body {
    font: normal 14px Roboto,arial,sans-serif;
}

a {
    color: @emphasized-color;
    text-decoration: none;

    &:hover, &:active {
        color: @link-color;
        text-decoration: underline;

        span.profile-link {
            color: @link-color;
        }
    }
    &:focus {
        outline: 0;
    }
}

span.profile-link {
    font-size: 12px;
    color: #aaaaaa;
}

img {
    border-style: none;
}


.border-radius (@radius) {
    border-radius: @radius;
    -moz-border-radius: @radius;
    -webkit-border-radius: @radius;
}

.box-sizing (@sizing) {
    box-sizing: @sizing;
    -moz-box-sizing: @sizing;
    -webkit-box-sizing: @sizing;
}


div#language-selector {
    width: 100%;

    font-size: 14px;
    text-align: right;
    line-height: @flag-size;

    @media @large-screen {
        position: absolute;
        top: -@flag-size;
    }

    img {
        width: @flag-size;
        height: @flag-size;
        vertical-align: bottom;
    }
}


div#profile {
    width: @badge-width;

    @media @large-screen {
        height: @profile-height;
    }

    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    margin: auto;

    // Emulate margin using border
    border: @profile-margin solid #FFFFFF;
}


div#badge {
    border: 1px solid @thin-border-color;
    .border-radius(3px);
    .box-sizing(border-box);

    padding: @block-padding;
    margin-bottom: @block-spacing;

    text-align: center;

    img#photo {
        border: 0;
        .border-radius(50%);

        display: block;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 10px;
    }

    span.profile-name {
        font-size: 16px;
    }
}


div#about {
    border: 1px solid @thin-border-color;
    border-top: 5px solid #6f85bf;
    border-bottom-width: 2px;
    .box-sizing(border-box);
    .border-radius(3px);

    font-size: 13px;
    padding: @block-padding;

    div.section {
        margin: 16px 0px 0px;

        &:first-child {
            margin-top: 0;
        }

        em {
            color: @emphasized-color;
            font-style: normal;
            font-weight: bold;
            font-size: 14px;
        }
    }

    div.section-body {
        padding-top: 10px;
    }

    ul.contacts {
        margin: 0;
        padding: 0;

        li {
            @favicon-size: 16px;

            height: @favicon-size;
            margin-top: 10px;
            list-style-type: none;

            &:first-child {
                margin-top: 0;
            }

            a {
                color: @link-color;
            }

            img.icon {
                width: @favicon-size;
                height: @favicon-size;
                padding-right: 5px;
                vertical-align: bottom;
            }
        }
    }
}

